# ChangeLog for dev-libs/hiredis
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/hiredis/ChangeLog,v 1.10 2014/06/16 02:35:46 vapier Exp $

*hiredis-0.11.0-r1 (16 Jun 2014)

  16 Jun 2014; Mike Frysinger <vapier@gentoo.org> +hiredis-0.11.0-r1.ebuild:
  Drop USE=debug as it only controls -g flags.  Add USE=static-libs support.
  Fix AR/CPPFLAGS handling.

  16 Jun 2014; Mike Frysinger <vapier@gentoo.org> hiredis-0.11.0.ebuild:
  Add arm love #511026.

  14 Mar 2014; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Remove <description> tag that is not a description of <maintainer> (use
  <longdescription> for that) and that is identical to the current DESCRIPTION.

  04 Mar 2014; Naohiro Aota <naota@gentoo.org> hiredis-0.11.0.ebuild:
  Add ~x86-fbsd

  03 Mar 2014; Jeroen Roovers <jer@gentoo.org> hiredis-0.11.0.ebuild:
  Marked ~hppa (bug #489736).

  03 Mar 2014; Fabian Groffen <grobian@gentoo.org> hiredis-0.11.0.ebuild:
  Marked and fixed for ~x64-solaris

  07 Aug 2013; <neurogeek@gentoo.org> hiredis-0.11.0.ebuild:
  Added multilib support. Closes bug #479484. Thanks to Emery Hemingway for the
  heads up and patch

  05 Feb 2013; <neurogeek@gentoo.org>
  files/hiredis-0.11.0-disable-network-tests.patch:
  Disabled failing test case. Closes bug #455452

  01 Feb 2013; <neurogeek@gentoo.org> ChangeLog:
  Forcing signing

*hiredis-0.11.0 (01 Feb 2013)

  01 Feb 2013; <neurogeek@gentoo.org> +hiredis-0.11.0.ebuild,
  +files/hiredis-0.11.0-disable-network-tests.patch, +metadata.xml:
  Initial commit