@@ -3,24 +3,16 @@ Hash: SHA256
 
 AUX hiredis-0.11.0-disable-network-tests.patch 1084 SHA256 25cc9f5a2ae873ddea7c02db73b6cb2f6a3414033debaab14add673d21d1860b SHA512 188460bdfd0c534b870303fd1f741ac09df6bcd65b5004d97c861d1ce9c6dbbab7708c5a04bcc20540b48f693e94180a991033fc7d5191ab12c5971e30308abe WHIRLPOOL e5d74ac465c899fd0718dbeb91504e0256e7aa8058dfd3a836f9eac612d55befe5a76809d251ea15573012e2f8b71ea9fbd54a61773f3ee2bdcfa1de7a75bcdf
 DIST hiredis-0.11.0.tar.gz 42137 SHA256 ff7b2849e55bf3589eecced7125934feb9645c36a4d490d001dc08c93553eafd SHA512 a506c3e09267bd431dea87fdb7f9a44fb1d4795cbecb31323fe2fb9d66c10351fbf6d931fdaf2731fc2d0a985234e5d6ba0c9e694374d2f414294d27b6f060b8 WHIRLPOOL 0d4d4385452b4fe3aabc7cbdbef95914fea685a65f44a6b2addaec8f0f7779ed7f72c50cfbb976e1838553746ae90f2ce8685c208727e450738ff2bb29cca144
-EBUILD hiredis-0.11.0-r1.ebuild 1221 SHA256 beb59b96cf5c6e82802fc8b5816adab6fb3ea0bb930aa31bf5fbed1f6beaae80 SHA512 e456800226303830789677254f352d8109ca6f4028f1ddf88e59d93296891041bcd50b8c63ea44d12a92f8d2c9f92c3450f533056f77c127847e8971b1dc2f53 WHIRLPOOL 4eaf1e64fa805b475a05e3a607878a96dc87e215ce3ff246d55992c9391469d5eb46a908c3416957cd54f1315cc19b381d9a67da8529b0a85978ed552a916f49
+EBUILD hiredis-0.11.0-r1.ebuild 1230 SHA256 a43bb8f57683bae61aad7df2d4ef9e4e76f8801e4dbc8cb8a43d0f2445ba1556 SHA512 7a47e6d4856588f3b8a92e8fbb726517f6572f92eeb5f3aa570780c7875d7cbc669a62728fceac968986356fd783bcd3f96e196553ef3a2e36ffc2dcd806ade9 WHIRLPOOL a7c07dfc5644b5f49a82c92ddac12098e769a71344aaeb6ba4362350a2878f673339b186d1ac00c4a137310b01d2644a6f8b5262958c0e259878aff3c8201589
 EBUILD hiredis-0.11.0.ebuild 1004 SHA256 d9b0ac228b999e660ecbbffee0b107e9376d582e6f4c626b4c00fb94be470f28 SHA512 4ab6f218bab4af7a10fced5dcf4efc0ea1b32dd7226d626001c9ab8cbea4cb7a52046f6741ca448494d41280ea8e435bdda6568dc41341ad100920939b699d3c WHIRLPOOL 5b9f54a09417cfd6e95de6aecc4adccf410389b2d8543766eee65fb41b3ecb88a390ccf9f7537eb890798c0520db16e2d911d8f0aa049e74ca10fd6ce064b541
-MISC ChangeLog 1585 SHA256 902c4136b4a6cc1b4d730a0d87d242f19050efb8c95cac4113aa8c9b416766b0 SHA512 5098aa202b6397db487e07c1c7c42289270c80eba32edccb0c2d633e3e5bd3dfc9e4cec31c343286fec70468f3dce651949281ce904fc3935897d7433bbbc7b9 WHIRLPOOL 85792e9681da24b46fd248c81833dbc050626b39e497da8e47bad68a57efb2faab8a0ffc1e53c9aa06b36622eb063ac4281b51ac7772595325ff20769a9e2b92
+MISC ChangeLog 1701 SHA256 d44d86a3159d37a080c316b94aa0cbaac44739ba262d9d65706fd23d623d98b7 SHA512 45c11500143ffe709744e1bbfc3cf803678cd165f65709013e8c708dba065315fc1264a634ef29a452d921be9e9092032083622750ace2549af2f9bc94cb09a7 WHIRLPOOL 9ac0a98faaf98f11fcd87ae1feb5e9885637845033981951edca34958eee24fb5a93ac0b958053e93ca24d1b092182c6b23bdba142a317fa56fd48dd18aadd2e
 MISC metadata.xml 234 SHA256 02f0cc57d2e1027d594d1686ac8f5d9cb992854b3e895beb7bd4c16d67cb90e9 SHA512 211ec5e95c3c4e23bcd28ce39518ffff08105334652f58ece6768229bd06623b5b6549445ebdcd2bc787f1be65e05d79f7fab5a53e7cd69774be22b593b7c71e WHIRLPOOL 1b91186683e7f17c9edca1c2bf4e295c6f5b3cd3e5179df4afc254e6efcd1d957b3e673dbee3666b01a627634905426a19949b755b18d18ef3a46864856b57bc
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJTnlgJAAoJEPGu1DbS6WIAgJkP/3jj7cDWBUoupW7/HxiCFFAN
-WQTRpBTuhKlFhMWFnPceI4+0KyCY3D2taYPFLNogMTDWU8xkHwLRqrSbDS6U35Gc
-qjZiGxFIRS9KsctUsI3CKDN/Jl/A3AjXieA7qT2FS6AcBx3Birst92zJTYhKdgNQ
-Z4hx4ka2wo0SgMJ3YOIQ9cLU3mKVzs/Nz8zMOLmNl86TH8eTHCjkarK0N/Rt5i8h
-0UNNcx1GGZMzny64vKnY7VNA1u3yNrwRHkovUdyowUC3TgKUoPohg1Igd0IyjjCN
-3f8Wm7bEGme5C0pVkBNgr3hzCrszNclxlV5C6ZXcQOO/+HNHd6+leB7lXr8rSIK6
-fThoQ2buep3fgUiTUrKMQ5kdnDJf2eJXZeYtzS+qe9yIbBZ8FYeLVDQ1bj/VCLbD
-/77O+M/21zY/+8GbgRwvyaZ+4OFNybvOTQ+mRkogoTgsOfHPUBccEkFWSjC+KVU1
-gtDp/KEvJgvb/y7ZrXvFd1xs8TWYmik7Ko0pppdWumb+yRWcbwadRAUHJDMOHYvH
-2UFqgWhjAOO4IIx6THm4wINF3hmx/ytdojgfMqgRn8ty3QRtRnRHt4bnxFamTXwe
-PSphJx0ITOE8xH8hwpiiGdIIl0yEHFClygqfEhDITwCdqdN98BTGkoSbVswlAJ0T
-UHmTA6uQoyV2S8XvuLMg
-=ugYv
+iKYEAREIAGYFAlPfpFJfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
+bnBncC5maWZ0aGhvcnNlbWFuLm5ldDFGNDg1MzU4NjMzRTAyNzA3RkY0ODA1QzAz
+RUUwM0ExQ0U1RDU0RTgACgkQA+4Doc5dVOgYCQCfRV1dMQoHHSJLexqyaFVaKvvK
+SpIAnjMnkxrvjJfLAwbsnz7WN3tjDWwU
+=ZsYn
 -----END PGP SIGNATURE-----
