@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/hiredis/hiredis-0.11.0-r1.ebuild,v 1.1 2014/06/16 02:35:45 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/hiredis/hiredis-0.11.0-r1.ebuild,v 1.2 2014/08/04 15:18:36 klausman Exp $
 
 EAPI=4
 
@@ -12,7 +12,7 @@ SRC_URI="http://github.com/redis/${PN}/archive/v${PV}.tar.gz -> ${P}.tar.gz"
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="~amd64 ~arm ~hppa ~x86 ~x86-fbsd ~x64-solaris"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~x86 ~x86-fbsd ~x64-solaris"
 IUSE="static-libs"
 
 src_prepare() {
