@@ -3,9 +3,9 @@ DESCRIPTION=Minimalistic C client library for the Redis database
 EAPI=4
 HOMEPAGE=http://github.com/redis/hiredis
 IUSE=static-libs
-KEYWORDS=~amd64 ~arm ~hppa ~x86 ~x86-fbsd ~x64-solaris
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~x86 ~x86-fbsd ~x64-solaris
 LICENSE=BSD
 SLOT=0
 SRC_URI=http://github.com/redis/hiredis/archive/v0.11.0.tar.gz -> hiredis-0.11.0.tar.gz
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=e95997135b8a016f56b255b7e06272c5
+_md5_=f2b9fed8cfe0c2f90f5d7f96b457ea63
