@@ -10,4 +10,4 @@ RDEPEND=>=net-libs/libvncserver-0.9.9 sys-libs/zlib virtual/jpeg:0 !aqua? ( x11-
 SLOT=4/4.12
 SRC_URI=mirror://kde/stable/4.12.5/src/krfb-4.12.5.tar.xz
 _eclasses_=cmake-utils	10b6a99f9058ac1b830d00b3421f04e4	eutils	06133990e861be0fe60c2b428fd025d9	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	9836bc51856bcaffac53c9cd4b59a8be	gnome2-utils	f658eba3cc594a21cf6eef4af47daa90	kde4-base	9f3084f58fc936e3f01c6e9ba21962bc	kde4-functions	492237eb2823bdc02bc769530501f0ea	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402	versionator	cd0bcdb170807e4a1984115e9d53a26f	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=e40cd0333ed210c2fb0ee223438d7e67
+_md5_=656c9c8d575ef0345bcb2e65f8da9552
