@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/krfb
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/krfb/ChangeLog,v 1.318 2014/07/31 20:46:59 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/krfb/ChangeLog,v 1.319 2014/08/04 15:25:47 johu Exp $
+
+  04 Aug 2014; Johannes Huber <johu@gentoo.org> krfb-4.12.5-r1.ebuild,
+  krfb-4.13.3-r1.ebuild:
+  Apply patch before eclass src_prepare, fixes bug #518824.
 
 *krfb-4.12.5-r1 (31 Jul 2014)
 *krfb-4.13.3-r1 (31 Jul 2014)
