@@ -1,6 +1,9 @@
 # ChangeLog for Gentoo/Alpha profile directory
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/arch/alpha/ChangeLog,v 1.195 2014/07/29 23:15:28 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/arch/alpha/ChangeLog,v 1.196 2014/08/04 15:52:03 klausman Exp $
+
+  04 Aug 2014; Tobias Klausmann <klausman@gentoo.org> package.use.mask:
+  Mask x265 use flag for ffmpeg due to bug 519046
 
   29 Jul 2014; Robin H. Johnson <robbat2@gentoo.org> package.use.mask:
   Update MySQL tcmalloc mask for percona-server.
